NEWS file for Transmission <http://transmission.m0k.org/>

1.00 (zzzz/xx/yy)
- All Platforms:
   + UPnP now performed by MiniUPnP
   + Option to prefer not using encryption
- OS X:
   + Leopard: Time Machine will ignore incomplete downloads
   + Pieces Bar (return of Advanced Bar)
   + Availability Bar (overlay on regular bar)

0.93 (2007/11/11)
- All Platforms:
   + Fix "router death" bug that impaired internet connectivity
   + Fix bug that could cause good peer connections to be lost
   + Tweak request queue code to improve download speeds
   + Consume less battery power on laptops
   + Fix minor IPC parsing error 

0.92 (2007/11/05)
- All Platforms:
   + Fix 0.90 data corruption bugs
   + Fix 0.90 possible delay when quitting
   + Fix 0.90 small memory leaks
- OS X:
   + Leopard: Fix bug with typing values in Inspector->Options
   + Leopard: Fix bug with toggling Minimal View
- GTK
   + Better support for large files on some Linux systems
   + Fix localization error in torrent inspector's dates

0.91 (2007/10/28)
- All Platforms:
   + Fix 0.90 speed limits
   + Fix 0.90 problems announcing to some trackers
   + Fix 0.90 socket connection leak
   + Fix 0.90 IPC crash
   + Fix 0.90 cache bug that could cause "verify local files" to fail
   + Fix 0.90 build errors on OpenBSD and on older C compilers
- OS X:
   + Fix a crash caused by custom sound files
   + Add Dutch localization, re-add Russian localization, fix Korean localization
- GTK:
   + Fix 0.90 packaging errors
   + Fix 0.90 crash-on-start with assertion failure: "destination != (void*)0"

0.90 (2007/10/23)
 - Encryption support, with option to ignore unencrypted peers
 - Ban peers that send too much bad data
 - Only report downloaded, verified good pieces in tracker `download' field
 - Improved compliance with BitTorrent spec
 - MSE Tracker Extension support
 - Significant rewrite of the libtransmission back-end
 - Icon enhanced to support size of 512 x 512
 - OS X:
   + Per-torrent action menu